v1.0.0/modules/schema/pages/class/MarketRun.adoc
= `MarketRun`
:toclevels: 4


+++This class represents an actual instance of a planned market. For example, a Day Ahead market opens with the Bid Submission, ends with the closing of the Bid Submission. The market run represent the whole process. MarketRuns can be defined for markets such as Day Ahead Market, Real Time Market, Hour Ahead Market, Week Ahead Market, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketRun`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketRun`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MarketRun {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Market {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketActualEvent {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



PlannedMarket {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MarketRun -> Market: Market


MarketRun -> MarketActualEvent: MarketActualEvent


MarketRun -> PlannedMarket: PlannedMarket


MarketRun -> DiagramObject: DiagramObjects


MarketRun -> InstanceSet: InstanceSet


MarketRun -> Name: Names


MarketRun -> ChangeSetMember: PropertiesCIMDataObject


MarketRun -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<Market,`Market`>>
| 1
| xref::class/Market.adoc[`Market`]
| n/a

| <<PlannedMarket,`PlannedMarket`>>
| 1
| xref::class/PlannedMarket.adoc[`PlannedMarket`]
| +++A planned market could have multiple market runs for the reason that a planned market could have a rerun.+++

| <<MarketActualEvent,`MarketActualEvent`>>
| 1..*
| xref::class/MarketActualEvent.adoc[`MarketActualEvent`]
| +++All actual events that trigger this market run.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<executionType,`executionType`>>
| 0..1
| xref::enumeration/ExecutionType.adoc[`ExecutionType`]
| +++The execution type; Day Ahead, Intra Day, Real Time Pre-Dispatch, Real Time Dispatch+++

| <<marketApprovalTime,`marketApprovalTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Approved time for case. Identifies the time that the dispatcher approved a specific real time unit dispatch case+++

| <<marketApprovedStatus,`marketApprovedStatus`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Set to true when the plan is approved by authority and becomes the official plan for the day ahead market. Identifies the approved case for the market for the specified time interval.+++

| <<marketEndTime,`marketEndTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The end time defined as the end of the market, market end time.+++

| <<marketStartTime,`marketStartTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The start time defined as the beginning of the market, market start time.+++

| <<marketType,`marketType`>>
| 0..1
| xref::enumeration/MarketType.adoc[`MarketType`]
| +++The market type, Day Ahead Market or Real Time Market.+++

| <<reportedState,`reportedState`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++This is the state of market run activity as reported by market systems to the market definition services.+++

| <<runState,`runState`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++This is the state controlled by market defintion service.
Possible values could be but not limited by: Open, Close.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#executionType]
=== `executionType`
+++The execution type; Day Ahead, Intra Day, Real Time Pre-Dispatch, Real Time Dispatch+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.executionType`
| Cardinality
| 0..1
| Type
| xref::enumeration/ExecutionType.adoc[`ExecutionType`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Market]
=== `Market`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.Market`
| Cardinality
| 1
| Type
| xref::class/Market.adoc[`Market`]


|===

//[discrete]
[#MarketActualEvent]
=== `MarketActualEvent`
+++All actual events that trigger this market run.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.MarketActualEvent`
| Cardinality
| 1..*
| Type
| xref::class/MarketActualEvent.adoc[`MarketActualEvent`]


|===

//[discrete]
[#marketApprovalTime]
=== `marketApprovalTime`
+++Approved time for case. Identifies the time that the dispatcher approved a specific real time unit dispatch case+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketApprovalTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#marketApprovedStatus]
=== `marketApprovedStatus`
+++Set to true when the plan is approved by authority and becomes the official plan for the day ahead market. Identifies the approved case for the market for the specified time interval.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketApprovedStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#marketEndTime]
=== `marketEndTime`
+++The end time defined as the end of the market, market end time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketEndTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#marketStartTime]
=== `marketStartTime`
+++The start time defined as the beginning of the market, market start time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#marketType]
=== `marketType`
+++The market type, Day Ahead Market or Real Time Market.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketType.adoc[`MarketType`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PlannedMarket]
=== `PlannedMarket`
+++A planned market could have multiple market runs for the reason that a planned market could have a rerun.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.PlannedMarket`
| Cardinality
| 1
| Type
| xref::class/PlannedMarket.adoc[`PlannedMarket`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#reportedState]
=== `reportedState`
+++This is the state of market run activity as reported by market systems to the market definition services.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.reportedState`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#runState]
=== `runState`
+++This is the state controlled by market defintion service.
Possible values could be but not limited by: Open, Close.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.runState`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


