v1.1.0/modules/schema/pages/class/MarketRun.adoc
= `MarketRun`
:toclevels: 4


+++This class represents an actual instance of a planned market. For example, a Day Ahead market opens with the Bid Submission, ends with the closing of the Bid Submission. The market run represent the whole process. MarketRuns can be defined for markets such as Day Ahead Market, Real Time Market, Hour Ahead Market, Week Ahead Market, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketRun`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketRun`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Market,`Market`>>
//| [[slots_table.Market]]<<Market,`Market`>>
| 1 +
xref::class/Market.adoc[`Market`]
| _n/a_
| _n/a_

| <<MarketActualEvent,`MarketActualEvent`>>
//| [[slots_table.MarketActualEvent]]<<MarketActualEvent,`MarketActualEvent`>>
| 1..* +
xref::class/MarketActualEvent.adoc[`MarketActualEvent`]
| +++All actual events that trigger this market run.+++
| _n/a_

| <<PlannedMarket,`PlannedMarket`>>
//| [[slots_table.PlannedMarket]]<<PlannedMarket,`PlannedMarket`>>
| 1 +
xref::class/PlannedMarket.adoc[`PlannedMarket`]
| +++A planned market could have multiple market runs for the reason that a planned market could have a rerun.+++
| _n/a_

| <<executionType,`executionType`>>
//| [[slots_table.executionType]]<<executionType,`executionType`>>
| 0..1 +
xref::enumeration/ExecutionType.adoc[`ExecutionType`]
| +++The execution type; Day Ahead, Intra Day, Real Time Pre-Dispatch, Real Time Dispatch+++
| _n/a_

| <<marketApprovalTime,`marketApprovalTime`>>
//| [[slots_table.marketApprovalTime]]<<marketApprovalTime,`marketApprovalTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Approved time for case. Identifies the time that the dispatcher approved a specific real time unit dispatch case+++
| _n/a_

| <<marketApprovedStatus,`marketApprovedStatus`>>
//| [[slots_table.marketApprovedStatus]]<<marketApprovedStatus,`marketApprovedStatus`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Set to true when the plan is approved by authority and becomes the official plan for the day ahead market. Identifies the...+++
| _n/a_

| <<marketEndTime,`marketEndTime`>>
//| [[slots_table.marketEndTime]]<<marketEndTime,`marketEndTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The end time defined as the end of the market, market end time.+++
| _n/a_

| <<marketStartTime,`marketStartTime`>>
//| [[slots_table.marketStartTime]]<<marketStartTime,`marketStartTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The start time defined as the beginning of the market, market start time.+++
| _n/a_

| <<marketType,`marketType`>>
//| [[slots_table.marketType]]<<marketType,`marketType`>>
| 0..1 +
xref::enumeration/MarketType.adoc[`MarketType`]
| +++The market type, Day Ahead Market or Real Time Market.+++
| _n/a_

| <<reportedState,`reportedState`>>
//| [[slots_table.reportedState]]<<reportedState,`reportedState`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++This is the state of market run activity as reported by market systems to the market definition services.+++
| _n/a_

| <<runState,`runState`>>
//| [[slots_table.runState]]<<runState,`runState`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++This is the state controlled by market defintion service.
Possible values could be but not limited by: Open, Close.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#executionType]
=== `executionType`
+++The execution type; Day Ahead, Intra Day, Real Time Pre-Dispatch, Real Time Dispatch+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.executionType`
| Cardinality
| 0..1
| Type
| xref::enumeration/ExecutionType.adoc[`ExecutionType`]


|===

////
[.text-left]
--
<<slots_table.executionType,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Market]
=== `Market`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.Market`
| Cardinality
| 1
| Type
| xref::class/Market.adoc[`Market`]


|===

////
[.text-left]
--
<<slots_table.Market,&#10548;>>
--
////


//[discrete]
[#MarketActualEvent]
=== `MarketActualEvent`
+++All actual events that trigger this market run.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.MarketActualEvent`
| Cardinality
| 1..*
| Type
| xref::class/MarketActualEvent.adoc[`MarketActualEvent`]


|===

////
[.text-left]
--
<<slots_table.MarketActualEvent,&#10548;>>
--
////


//[discrete]
[#marketApprovalTime]
=== `marketApprovalTime`
+++Approved time for case. Identifies the time that the dispatcher approved a specific real time unit dispatch case+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketApprovalTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.marketApprovalTime,&#10548;>>
--
////


//[discrete]
[#marketApprovedStatus]
=== `marketApprovedStatus`
+++Set to true when the plan is approved by authority and becomes the official plan for the day ahead market. Identifies the approved case for the market for the specified time interval.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketApprovedStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.marketApprovedStatus,&#10548;>>
--
////


//[discrete]
[#marketEndTime]
=== `marketEndTime`
+++The end time defined as the end of the market, market end time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketEndTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.marketEndTime,&#10548;>>
--
////


//[discrete]
[#marketStartTime]
=== `marketStartTime`
+++The start time defined as the beginning of the market, market start time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.marketStartTime,&#10548;>>
--
////


//[discrete]
[#marketType]
=== `marketType`
+++The market type, Day Ahead Market or Real Time Market.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.marketType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketType.adoc[`MarketType`]


|===

////
[.text-left]
--
<<slots_table.marketType,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PlannedMarket]
=== `PlannedMarket`
+++A planned market could have multiple market runs for the reason that a planned market could have a rerun.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.PlannedMarket`
| Cardinality
| 1
| Type
| xref::class/PlannedMarket.adoc[`PlannedMarket`]


|===

////
[.text-left]
--
<<slots_table.PlannedMarket,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#reportedState]
=== `reportedState`
+++This is the state of market run activity as reported by market systems to the market definition services.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.reportedState`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.reportedState,&#10548;>>
--
////


//[discrete]
[#runState]
=== `runState`
+++This is the state controlled by market defintion service.
Possible values could be but not limited by: Open, Close.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRun.runState`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.runState,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Market.adoc[`Market`] | xref::class/Market.adoc#MarketRun[`MarketRun`]



| xref::class/MarketActualEvent.adoc[`MarketActualEvent`] | xref::class/MarketActualEvent.adoc#MarketRun[`MarketRun`]



| xref::class/PlannedMarket.adoc[`PlannedMarket`] | xref::class/PlannedMarket.adoc#MarketRun[`MarketRun`]


|===

